feat(gui): manage plugins in preferences window